2005-06-10  Helmut Eller  <heller@common-lisp.net>

	* nregex.lisp (slime-nregex): Rename package to avoid name clashes
	with other version of this file.

	* swank.lisp (compiled-regex): Use the new package name.

	* slime.el (slime-with-xref-buffer): Gensym package too, to avoid
	problems when switching to buffers with -*- package: ... -*- file
	variables.  From Antonio Menezes Leitao.
	(slime-property-bounds): Use the prop argument instead of the
	hardcoded 'slime-repl-old-output.  From Andras Simon.

2005-06-07  Espen Wiborg  <espenhw@grumblesmurf.org>

	* swank-corman.lisp: Convert to Unix line-endings.
	(create-socket): Pass through the port argument unmodified,
	gettting a random port if 0.  Requires supporting change in
	<ccl>/modules/sockets.lisp.
	(inspect-for-emacs): defimplementation instead of defmethod.

2005-06-06  Espen Wiborg  <espenhw@grumblesmurf.org>

	* doc/slime.texi, PROBLEMS: Added notes about CCL.

2005-06-03  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-background-activities-enabled-p): Allow
	background stuff in repl-mode buffers too.

	* swank-cmucl.lisp (sis/misc): Return t for :interactive-p.

2005-06-01  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-load-system, slime-oos): Fix bug related to file
	locking.  Don't bind the variable system-name.  system-name is a
	predefined Emacs variable and is used among other things for lock
	filenames.

2005-06-01  Joerg Hoehle <hoehle@users.sourceforge.net>

	* swank-clisp (getpid): Updates for current CLISP versions. Use
	defimplementation. Define always (slime needs it).
	
2005-06-01  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-background-activities-enabled-p): Return nil
	instead of signalling an error if there is a open but no default
	connection.
	(slime-current-connection): New helper function.
	(slime-connection): Use it.
	(slime-first-change-hook): Only run when
	slime-background-activities-enabled-p.
